refactor: 优化Tapd插件